--- a/TaskHTMLCSS(DICKY FIRMANSYAH)/dashboard.html
+++ b/TaskHTMLCSS(DICKY FIRMANSYAH)/dashboard.html
@@ -205,7 +205,7 @@
         labels: ["", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
         datasets: [{
             label: "This Month",
-            borderColor: "rgb(127, 255, 255)",
+            // borderColor: "rgb(127, 255, 255)",
             data: [0, 20, 28, 19, 40, 12, 48, 40, 32, 34, 23, 47, 33, 40, 30],
             fill: false,
             borderColor: "rgb(75, 192, 192)",
