--- a/TaskHTMLCSS(DICKY FIRMANSYAH)/index.html
+++ b/TaskHTMLCSS(DICKY FIRMANSYAH)/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="navbar mb-5">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand food-mobile" href="#">Food Items</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
