--- a/TaskHTMLCSS(DICKY FIRMANSYAH)/index4.html
+++ b/TaskHTMLCSS(DICKY FIRMANSYAH)/index4.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="navbar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand food-mobile" href="#">Food Items</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
     </div>
     <div class="container nav-container">
         <div class="row" style="border: 1px 1px solid black;">
-            <div class="col-md-1 mb-5 menu">
+            <div class="col-md-1 mb-5 z">
                 <img src="assets/img/menu.png" width="45px" />
             </div>
             <div class="col-md-8">
